--- a/location/Base.lproj/Main.storyboard
+++ b/location/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,53 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yhI-3V-ghi">
+                                <rect key="frame" x="40" y="193" width="520" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f0y-PC-ShR">
+                                <rect key="frame" x="250" y="320" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="NC0-1k-UXT"/>
+                                    <constraint firstAttribute="height" constant="100" id="RtR-iX-LyJ"/>
+                                </constraints>
+                                <state key="normal" title="Get location"/>
+                                <connections>
+                                    <action selector="getCurrentLocation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0ti-RH-4yP"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O1O-uL-Mdq">
+                                <rect key="frame" x="40" y="120" width="520" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="yhI-3V-ghi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="6Vu-nD-wuB"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="O1O-uL-Mdq" secondAttribute="trailing" constant="20" id="DhX-mi-1si"/>
+                            <constraint firstItem="f0y-PC-ShR" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="KeE-ND-zPF"/>
+                            <constraint firstItem="f0y-PC-ShR" firstAttribute="top" secondItem="yhI-3V-ghi" secondAttribute="bottom" constant="97" id="O3L-I2-Bqj"/>
+                            <constraint firstItem="O1O-uL-Mdq" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="100" id="OCi-2O-Iu5"/>
+                            <constraint firstItem="O1O-uL-Mdq" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="Vgc-uB-JCb"/>
+                            <constraint firstItem="yhI-3V-ghi" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Znq-lJ-1qG"/>
+                            <constraint firstItem="O1O-uL-Mdq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="mFH-O6-HA5"/>
+                            <constraint firstItem="yhI-3V-ghi" firstAttribute="top" secondItem="O1O-uL-Mdq" secondAttribute="bottom" constant="43" id="sjC-QQ-Au6"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="yhI-3V-ghi" secondAttribute="trailing" constant="20" id="xui-dX-HrC"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="latitudeLabel" destination="O1O-uL-Mdq" id="Chr-8S-hGo"/>
+                        <outlet property="longitudeLabel" destination="yhI-3V-ghi" id="TFw-nc-CNS"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="229" y="265"/>
         </scene>
     </scenes>
 </document>
